a lot cleaner code

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p id="imUp1A" style="margin-top: 0;">0</p>
                     <p id="imUp1T" class="upgrade-rate number">0</p>
                 </div>
-                <button id="imUp1" onclick="imUp1Click()" class="upgrade-button number"></button>
+                <button id="imUp1" onclick="imClick(0)" class="upgrade-button number"></button>
             </div>
 
             <div class="upgrades">
@@ -58,7 +58,7 @@
                     <p id="imUp2A" style="margin-top: 0;">0</p>
                     <p id="imUp2T" class="upgrade-rate number">0</p>
                 </div>
-                <button id="imUp2" onclick="imUp2Click()" class="upgrade-button number"></button>
+                <button id="imUp2" onclick="imClick(1)" class="upgrade-button number"></button>
             </div>
 
             <div class="upgrades">
@@ -73,7 +73,7 @@
                     <p id="imUp3A" style="margin-top: 0;">0</p>
                     <p id="imUp3T" class="upgrade-rate number">0</p>
                 </div>
-                <button id="imUp3" onclick="imUp3Click()" class="upgrade-button number"></button>
+                <button id="imUp3" onclick="imClick(2)" class="upgrade-button number"></button>
             </div>
             
             <div class="upgrades">
@@ -88,7 +88,7 @@
                     <p id="imUp4A" style="margin-top: 0;">0</p>
                     <p id="imUp4T" class="upgrade-rate number">0</p>
                 </div>
-                <button id="imUp4" onclick="imUp4Click()" class="upgrade-button number"></button>
+                <button id="imUp4" onclick="imClick(3)" class="upgrade-button number"></button>
             </div>
 
         </div>
@@ -113,6 +113,6 @@
         </div>
     </body>
     <script src="button-ripple.js"></script>
-    <script type="module" src="impression.js"></script>
+    <script type="module" src="impression-array.js"></script>
 </body>
 </html>
