--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
         </style>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <body>
+<body style="margin: 0">
+    <div class="newsticker-bg">
+        <p>newsticker</p>
+    </div>
+
+    <div style="margin: 3vw">
         <div>
             <div class="amount-div">
                 <p class="center">You currently have</p>
@@ -111,7 +115,7 @@
                 <button id="imAb3" onclick="" class="upgrade-button number">Buy</button>
             </div>
         </div>
-    </body>
+    </div>
     <script src="button-ripple.js"></script>
     <script type="module" src="impression.js"></script>
 </body>
