--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <div class="newsticker-bg" id="newstickerBg">
             <p id="newsticker"></p>
         </div>
-        <div style="margin: calc(16px + .4vw)">
+        
+        <div style="margin: calc(16px + .4vw); margin-bottom: calc(20px + .4vw);">
             <div class="amount-div">
                 <p class="center">คุณมี</p>
                 <div>
@@ -41,16 +42,16 @@
                 <h2>ในขณะที่คุณไม่อยู่...</h2>
                 <p>คุณได้รับจาก</p>
                 <p id="imGain">(กำลังคำนวณ im ที่ได้รับขณะ offline)</p>
-                <div class="bar-container" hidden="hidden">
+                <div class="bar-container">
                     <div class="bar" id="bar" style="width: 50%"></div>
                 </div>
-                <button class="button"
+                <button class="button" id="close" disabled="true"
                     onclick="document.getElementById('away').style.display = 'none'">ปิดข้อความนี้</button>
             </div>
-
+            
             <button onclick="localStorage.removeItem('save')">clear save</button>
 
-            <h2 class="center">Upgrades</h2>
+            <h2 class="center">Ims</h2>
             <button onclick="buyMax()" class="button" style="display: block; margin-left: auto; margin-right: 5px;">
                 Buy Max
             </button>
@@ -131,44 +132,69 @@
             <h2 class="center">Prestige</h2>
             <div class="space-between">
                 <div class="prestige-div">
-                    <p class="prestige-desc">Reset everything for ×2 multiplier on all ims</p>
+                    <p class="prestige-desc">Reset 1-4 ims for 5 multiplier</p>
                     <div>
-                        <p class="upgrade-rate prestige-rate" id="imPV1">Currently: ×1</p>
-                        <button class="button" id="imP1" onclick="prestigeClick(1)">Reset 1</button>
+                        <p class="upgrade-rate prestige-rate" id="imPV1">Currently: ×1.000</p>
+                        <button class="button" id="imP1" onclick="prestigeClick(0)">10 Fifth</button>
                     </div>
                 </div>
                 <div class="prestige-div">
-                    <p class="prestige-desc">Reset all ims for multiplier on each im, based on their amount</p>
+                    <p class="prestige-desc">Reset everything for ×4 multiplier on all ims</p>
                     <div>
                         <p class="upgrade-rate prestige-rate" id="imPV2">Currently: (1)</p>
-                        <button class="button" id="imP2" onclick="prestigeClick(2)">Reset 1</button>
+                        <button class="button" id="imP2" onclick="prestigeClick(1)"></button>
+                    </div>
+                </div>
+            </div>
+            <div class="space-between">
+                <div class="prestige-div">
+                    <p class="prestige-desc">Reset everything for multiplier based on each ims</p>
+                    <div>
+                        <p class="upgrade-rate prestige-rate" id="imPV3">Currently: ×1</p>
+                        <button class="button" id="imP3" onclick="prestigeClick(2)"></button>
+                    </div>
+                </div>
+                <div class="prestige-div">
+                    <p class="prestige-desc">Reset everything while you keep your 5th multiplier</p>
+                    <div>
+                        <p class="upgrade-rate prestige-rate" id="imPV4">Currently: ×1</p>
+                        <button class="button" id="imP4" onclick="prestigeClick(3)"></button>
                     </div>
                 </div>
             </div>
 
             <hr>
 
-            <h2 class="center">Autobuys</h2>
+            <h2 class="center">Automation</h2>
             <div>
                 <div class="upgrades">
-                    <p>U1</p>
-                    <label class="toggle">
-                        <input class="toggle-checkbox" type="checkbox" id="imAb1T">
-                        <span class="toggle-button"></span>
-                    </label>
+                    <p class="width-35">U1</p>
+                    <button class="toggle" id="imAb1T" onclick="imAbToggle(0)">OFF</button>
                     <button id="imAb1" onclick="imAbClick(0)" class="upgrade-button number width-40">Buy</button>
                 </div>
 
                 <div class="upgrades">
-                    <p>U2</p>
-                    <input class="checkbox" type="checkbox" id="imAb2T">
+                    <p class="width-35">U2</p>
+                    <button class="toggle" id="imAb2T" onclick="imAbToggle(1)">OFF</button>
                     <button id="imAb2" onclick="imAbClick(1)" class="upgrade-button number width-40">Buy</button>
                 </div>
 
                 <div class="upgrades">
-                    <p>U3</p>
-                    <input class="checkbox" type="checkbox" id="imAb3T">
+                    <p class="width-35">U3</p>
+                    <button class="toggle" id="imAb3T" onclick="imAbToggle(2)">OFF</button>
                     <button id="imAb3" onclick="imAbClick(2)" class="upgrade-button number width-40">Buy</button>
+                </div>
+
+                <div class="upgrades">
+                    <p class="width-35">U4</p>
+                    <button class="toggle" id="imAb4T" onclick="imAbToggle(3)">OFF</button>
+                    <button id="imAb4" onclick="imAbClick(3)" class="upgrade-button number width-40">Buy</button>
+                </div>
+
+                <div class="upgrades">
+                    <p class="width-35">U5</p>
+                    <button class="toggle" id="imAb5T" onclick="imAbToggle(4)">OFF</button>
+                    <button id="imAb5" onclick="imAbClick(4)" class="upgrade-button number width-40">Buy</button>
                 </div>
             </div>
         </div>
